force-app/main/default/objects/Module__c/fields/ApprovalGrade__c.field-meta.xml
<CustomField>
    <fullName>ApprovalGrade__c</fullName>
    <inlineHelpText>Enter the minimum grade (from 0 to 100) that members must get to pass the module.</inlineHelpText>
    <label>Approval Grade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>