force-app/main/default/objects/Module__c/fields/AttemptsAllowed__c.field-meta.xml
<CustomField>
    <fullName>AttemptsAllowed__c</fullName>
    <inlineHelpText>Enter the maximum number of times members will be allowed to attempt the module. If blank, members will have unlimited tries.</inlineHelpText>
    <label>Attempts Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>