force-app/main/default/objects/Module__c/fields/AttemptsAllowedPerQuestion__c.field-meta.xml
<CustomField>
    <fullName>AttemptsAllowedPerQuestion__c</fullName>
    <label>Attempts Allowed per Question</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>