force-app/main/default/objects/Module__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <inlineHelpText>For Youtube and Vimeo videos, enter the embed URL. For internally-hosted files, enter the URL starting after your Salesforce instance (i.e. /servlet/...). For externally-hosted files, enter the full URL.</inlineHelpText>
    <label>Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>