force-app/main/default/objects/Module__c/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <inlineHelpText>Select the format of your module content.</inlineHelpText>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Youtube Video</fullName>
            </value>
            <value>
                <fullName>MP4</fullName>
            </value>
            <value>
                <fullName>MP3</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>Vimeo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>