force-app/main/default/objects/Module__c/fields/HasDependencies__c.field-meta.xml
<CustomField>
    <fullName>HasDependencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Dependencies</label>
    <type>Checkbox</type>
</CustomField>