force-app/main/default/objects/Module__c/fields/NumberOfQuestions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfQuestions__c</fullName>
    <label>Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>