force-app/main/default/objects/Module__c/fields/PenaltyMode__c.field-meta.xml
<CustomField>
    <fullName>PenaltyMode__c</fullName>
    <label>Penalty Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Percent Decrease</fullName>
            </value>
            <value>
                <fullName>Negative Weight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>