force-app/main/default/objects/Module__c/fields/QuestionDisplayMode__c.field-meta.xml
<CustomField>
    <fullName>QuestionDisplayMode__c</fullName>
    <defaultValue>&#39;All at once&#39;</defaultValue>
    <label>Question Display Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One by one</fullName>
            </value>
            <value>
                <fullName>All at once</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>