force-app/main/default/objects/Module__c/fields/QuestionPool__c.field-meta.xml
<CustomField>
    <fullName>QuestionPool__c</fullName>
    <inlineHelpText>Enter the number of questions you want to be displayed during a given module attempt. Leave this blank if you want all questions to appear.</inlineHelpText>
    <label>Question Pool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>