force-app/main/default/objects/Module__c/fields/ShuffleQuestions__c.field-meta.xml
<CustomField>
    <fullName>ShuffleQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shuffle Questions</label>
    <type>Checkbox</type>
</CustomField>