force-app/main/default/objects/Module__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>Total Value</label>
    <summarizedField>Question__c.CorrectWeight__c</summarizedField>
    <summaryForeignKey>Question__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>