force-app/main/default/objects/Module__c/fields/WeightedQuestions__c.field-meta.xml
<CustomField>
    <fullName>WeightedQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, you can specify different weighting and incorrect response penalties for each question.</inlineHelpText>
    <label>Weighted Questions</label>
    <type>Checkbox</type>
</CustomField>