force-app/main/default/objects/Module__c/validationRules/AttemptsAllowedPerQuestionRange.validationRule-meta.xml
<ValidationRule>
    <fullName>AttemptsAllowedPerQuestionRange</fullName>
    <active>true</active>
    <description>The field Attempts Allowed per Question must be a number that can be null or greater than 0.</description>
    <errorConditionFormula>AND( NOT( ISBLANK(  AttemptsAllowedPerQuestion__c  ) ) ,  AttemptsAllowedPerQuestion__c   &lt;= 0)</errorConditionFormula>
    <errorDisplayField>AttemptsAllowedPerQuestion__c</errorDisplayField>
    <errorMessage>When filled, the number of attempts allowed per question must be positive.</errorMessage>
</ValidationRule>