force-app/main/default/objects/Module__c/validationRules/AttemptsAllowedRange.validationRule-meta.xml
<ValidationRule>
    <fullName>AttemptsAllowedRange</fullName>
    <active>true</active>
    <description>The field Attempts Allowed must be a number that can be null or greater than 0.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( AttemptsAllowed__c ) ) , AttemptsAllowed__c  &lt;= 0)</errorConditionFormula>
    <errorDisplayField>AttemptsAllowed__c</errorDisplayField>
    <errorMessage>When filled, the number of attempts allowed must be positive.</errorMessage>
</ValidationRule>