force-app/main/default/objects/Module__c/validationRules/CannotChangeCourse.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeCourse</fullName>
    <active>true</active>
    <description>The course cannot be changed.</description>
    <errorConditionFormula>ISCHANGED( Course__c )</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>The course cannot be changed.</errorMessage>
</ValidationRule>