force-app/main/default/objects/Module__c/validationRules/CourseMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseMandatory</fullName>
    <active>true</active>
    <description>The course field is mandatory.</description>
    <errorConditionFormula>ISBLANK( Course__c )</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>The course is mandatory.</errorMessage>
</ValidationRule>