force-app/main/default/objects/Module__c/validationRules/GradeApprovalIfActive.validationRule-meta.xml
<ValidationRule>
    <fullName>GradeApprovalIfActive</fullName>
    <active>true</active>
    <description>When the module is set to active must validate that the Grade Approval is not null.</description>
    <errorConditionFormula>AND( IsActive__c , ISBLANK( ApprovalGrade__c ))</errorConditionFormula>
    <errorDisplayField>ApprovalGrade__c</errorDisplayField>
    <errorMessage>Active modules must have an approval grade.</errorMessage>
</ValidationRule>