force-app/main/default/objects/Module__c/validationRules/IsActiveChangedWhenCourseIsActive.validationRule-meta.xml
<ValidationRule>
    <fullName>IsActiveChangedWhenCourseIsActive</fullName>
    <active>true</active>
    <description>The module &quot;IsActive&quot; field cannot be changed if the related course is active, completed or scheduled.</description>
    <errorConditionFormula>AND(
				AND( 
				ISCHANGED( IsActive__c ) ,  
				OR(TEXT(Course__r.Status__c) = &#39;Active&#39;,
TEXT(Course__r.Status__c) = &#39;Scheduled&#39;,
TEXT(Course__r.Status__c) = &#39;Completed&#39;)),
 $Setup.FieloPLT__PublicSettings__c.EnableEditingWhileActive__c = false)</errorConditionFormula>
    <errorDisplayField>IsActive__c</errorDisplayField>
    <errorMessage>&quot;Active&quot; status cannot be changed if the related course is active, completed or scheduled.</errorMessage>
</ValidationRule>