force-app/main/default/objects/Module__c/validationRules/ModuleNameNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>ModuleNameNotNull</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),  ISBLANK(Name) )</errorConditionFormula>
    <errorMessage>Module Name cannot be blank</errorMessage>
</ValidationRule>