force-app/main/default/objects/Module__c/validationRules/NoQuestionPoolIfWeightedQuestions.validationRule-meta.xml
<ValidationRule>
    <fullName>NoQuestionPoolIfWeightedQuestions</fullName>
    <active>true</active>
    <description>The Module cannot have a value for Question Pool and use Weighted Questions.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(QuestionPool__c)) , WeightedQuestions__c)</errorConditionFormula>
    <errorMessage>The Module cannot use a Question Pool together with Weighted Questions.</errorMessage>
</ValidationRule>