force-app/main/default/objects/Module__c/validationRules/NotActiveIfNew.validationRule-meta.xml
<ValidationRule>
    <fullName>NotActiveIfNew</fullName>
    <active>true</active>
    <description>The module cannot be created with status active, as it won&#39;t have questions yet.</description>
    <errorConditionFormula>AND( ISNEW() , IsActive__c )</errorConditionFormula>
    <errorDisplayField>IsActive__c</errorDisplayField>
    <errorMessage>New module (without questions) cannot be active.</errorMessage>
</ValidationRule>