force-app/main/default/objects/Module__c/validationRules/QuestioPoolNotZero.validationRule-meta.xml
<ValidationRule>
    <fullName>QuestioPoolNotZero</fullName>
    <active>true</active>
    <description>Question Pool cannot be equal to zero.</description>
    <errorConditionFormula>QuestionPool__c  = 0</errorConditionFormula>
    <errorDisplayField>QuestionPool__c</errorDisplayField>
    <errorMessage>Question Pool cannot be equal to zero.</errorMessage>
</ValidationRule>