force-app/main/default/objects/Module__c/validationRules/QuestioPoolPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>QuestioPoolPositive</fullName>
    <active>true</active>
    <description>Question Pool cannot be equal to zero.</description>
    <errorConditionFormula>QuestionPool__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>QuestionPool__c</errorDisplayField>
    <errorMessage>Question Pool must be greater than zero.</errorMessage>
</ValidationRule>